@@ -1,3 +1,8 @@
+2009-04-24  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* win/tkWinDialog.c (ChooseDirectoryValidateProc): no need to set
+	cwd on selchange. Prevents delete of selected folder in dialog.
+
 2009-04-24  Stuart Cassoff <stwo@users.sf.net>
 
 	* unix/Makefile.in:	Removed stray @ from Makefile.in test target.
